--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ export(plot_loadings)
 export(plot_module_trajectory)
 export(plot_optimal_cluster)
 export(posterior_probability)
+export(process_generic)
 export(process_protein)
 export(process_rna)
 export(processed_proteomics)
